--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,6 @@
             android:layout_marginRight="4dp"
             android:background="@drawable/background_white_text"
             android:orientation="vertical"
-            app:layout_constraintEnd_toStartOf="@+id/menuGridView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -109,36 +108,36 @@
     <!--            app:srcCompat="@drawable/ic_delete_forever_black_24dp" />-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout"
-            android:layout_width="0dp"
+        android:id="@+id/constraintLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:background="@drawable/background_white_text"
+        app:layout_constraintEnd_toStartOf="@+id/menuGridView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:background="@drawable/background_white_text"
-            app:layout_constraintEnd_toStartOf="@+id/menuGridView"
+            android:text="Order"
+            android:textColor="@color/black"
+            android:textSize="26sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/short_long_toggle_button">
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Order"
-                android:textColor="@color/black"
-                android:textSize="26sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-                android:id="@+id/order_number_TV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1"
-                android:textColor="@color/black"
-                android:textSize="26sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/order_number_TV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            android:textColor="@color/black"
+            android:textSize="26sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -226,151 +225,35 @@
             app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-            android:id="@+id/history_button"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
-            android:background="@drawable/background_other_buttons"
-            android:onClick="openHistoryDialog"
-            android:text="Order History"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/discount_25_button"
-            app:layout_constraintEnd_toStartOf="@+id/menuGridView"
-            app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/history_button"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@drawable/background_other_buttons"
+        android:onClick="openHistoryDialog"
+        android:text="Order History"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/menuGridView"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-            android:id="@+id/discount_25_button"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
-            android:background="@drawable/background_other_buttons"
-            android:onClick="lastItemCostMultiplier"
-            android:text="25%"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/discount_100_button"
-            app:layout_constraintEnd_toStartOf="@+id/discount_50_button"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-            android:id="@+id/discount_50_button"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="4dp"
-            android:background="@drawable/background_other_buttons"
-            android:onClick="lastItemCostMultiplier"
-            android:text="50%"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/discount_100_button"
-            app:layout_constraintEnd_toStartOf="@+id/menuGridView"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/discount_25_button" />
-
-    <Button
-            android:id="@+id/discount_100_button"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="2dp"
-            android:background="@drawable/background_other_buttons"
-            android:onClick="lastItemCostMultiplier"
-            android:text="100%"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/discount_50_button"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-            android:id="@+id/refund_button"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginBottom="2dp"
-            android:background="@drawable/background_other_buttons"
-            android:onClick="lastItemCostMultiplier"
-            android:text="Refund"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/menuGridView"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/discount_25_button" />
-
-    <Button
-            android:id="@+id/finish_button"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="4dp"
-            android:background="@drawable/background_other_buttons"
-            android:onClick="finishSession"
-            android:text="Finish"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/settings_button"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
-
-    <Button
-            android:id="@+id/settings_button"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_margin="4dp"
-            android:background="@drawable/background_other_buttons"
-            android:onClick="openSettings"
-            android:text="Settings"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/short_long_toggle_button"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/finish_button"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
-
-    <Button
-            android:id="@+id/short_long_toggle_button"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_margin="4dp"
-            android:layout_marginRight="0dp"
-            android:background="@drawable/background_other_buttons"
-            android:onClick="toggleShortLongName"
-            android:text="Short Names"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/settings_button"
-            app:layout_constraintTop_toBottomOf="@+id/title"
-            android:layout_marginEnd="0dp" />
+        android:id="@+id/settings_button"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/background_other_buttons"
+        android:onClick="openSettings"
+        android:text="Settings"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/title"
+        app:layout_constraintEnd_toStartOf="@+id/menuGridView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
