--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,11 +28,12 @@
                 android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/amma_font"
-                android:text="Amrita Cafe"
+                android:text="Amrita Vegtables"
                 android:textColor="@color/black"
-                android:textSize="50sp" />
+                android:textSize="40sp" />
 
             <TextView
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/versionName"
@@ -48,7 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="2dp"
-            android:text="Jayadev @ Amma"
+            android:text="@string/versionName"
+
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/menuRecyclerView"
