--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -5,6 +5,8 @@
     android:id="@+id/item_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="3dp"
+    android:layout_margin="3dp"
     android:background="@drawable/background_menu_item"
     android:orientation="vertical">
 
@@ -33,7 +35,7 @@
         android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:textColor="@color/black"
-        android:textSize="26sp"
+        android:textSize="0sp"
         android:textStyle="bold"
         android:typeface="serif"
         app:layout_constraintBottom_toTopOf="@+id/cost"
